[package]
name = "sos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp = "0.5.7"
protobuf = "3.2.0"

[build-dependencies]
cpp_build = "0.5"
cbindgen = "0.20.0"
protobuf-codegen = "3.2.0"

[lib]
crate-type = ["staticlib"]
