[package]
name = "sos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commonlibsse = { path = "../commonlibsse" }
protos = { path = "../protos" }
uncased = "0.9.7"
cxx = "1.0"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
natord = "1.0.9"
log = "0.4.17"
configparser = "3.0.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"

[build-dependencies]
cbindgen = "0.20.0"
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
